# server

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Logger.h  TcpListener.h  WebServer.h
src/: Logger.cpp  TcpListener.cpp  WebServer.cpp  main.cpp
www/: index.html  random.html
